browser/themes/shared/customizableui/customizeMode.inc.css
:
root
{
-
-
drag
-
drop
-
transition
-
duration
:
.
3s
;
}
#
main
-
window
[
customizing
]
.
customization
-
target
:
not
(
#
PanelUI
-
contents
)
:
not
(
#
widget
-
overflow
-
fixed
-
list
)
{
min
-
width
:
100px
;
}
#
customization
-
container
{
background
-
color
:
var
(
-
-
toolbar
-
non
-
lwt
-
bgcolor
)
;
background
-
image
:
var
(
-
-
toolbar
-
non
-
lwt
-
bgimage
)
;
color
:
var
(
-
-
toolbar
-
non
-
lwt
-
textcolor
)
;
text
-
shadow
:
none
;
}
#
customization
-
container
:
-
moz
-
lwtheme
{
background
-
color
:
transparent
;
background
-
image
:
linear
-
gradient
(
var
(
-
-
toolbar
-
bgcolor
)
var
(
-
-
toolbar
-
non
-
lwt
-
bgcolor
)
45px
)
;
}
#
customization
-
palette
#
customization
-
empty
{
padding
:
5px
20px
20px
;
}
#
customization
-
header
{
font
-
weight
:
600
;
font
-
size
:
1
.
2em
;
margin
:
20px
20px
15px
;
}
#
customization
-
header
:
-
moz
-
lwtheme
{
text
-
shadow
:
0
0
1em
var
(
-
-
toolbar
-
non
-
lwt
-
bgcolor
)
0
0
1em
var
(
-
-
toolbar
-
non
-
lwt
-
bgcolor
)
0
0
.
5em
var
(
-
-
toolbar
-
non
-
lwt
-
bgcolor
)
;
}
#
customization
-
panel
-
container
{
padding
:
0
20px
25px
;
}
#
customization
-
footer
{
border
-
top
:
1px
solid
rgba
(
0
0
0
.
15
)
;
padding
:
10px
;
}
%
if
defined
(
XP_MACOSX
)
|
|
defined
(
XP_WIN
)
%
ifdef
XP_WIN
media
(
-
moz
-
windows
-
default
-
theme
)
{
%
endif
.
customizationmode
-
button
{
border
:
1px
solid
#
b1b1b1
;
background
-
color
:
#
fcfcfd
;
-
moz
-
appearance
:
none
;
}
.
customizationmode
-
checkbox
.
customizationmode
-
button
{
color
:
rgb
(
71
71
71
)
;
margin
:
6px
10px
;
padding
:
2px
5px
;
}
#
customization
-
reset
-
button
#
customization
-
undo
-
reset
-
button
#
customization
-
done
-
button
{
min
-
width
:
10em
;
}
#
customization
-
done
-
button
{
color
:
#
fff
;
font
-
weight
:
700
;
border
-
color
:
#
0060df
;
background
-
color
:
#
0a84ff
;
}
.
customizationmode
-
button
>
.
box
-
inherit
{
border
-
width
:
0
;
padding
:
3px
0
;
padding
-
inline
-
start
:
0
;
padding
-
inline
-
end
:
0
;
}
#
customization
-
toolbar
-
visibility
-
button
{
padding
-
inline
-
start
:
8px
;
}
.
customizationmode
-
button
[
type
=
menu
]
>
.
box
-
inherit
>
.
box
-
inherit
>
.
button
-
text
{
padding
-
inline
-
end
:
10px
;
}
.
customizationmode
-
button
>
.
button
-
icon
{
margin
-
inline
-
start
:
0
;
}
.
customizationmode
-
button
:
not
(
[
type
=
menu
]
)
>
.
button
-
text
{
margin
-
inline
-
end
:
0
;
}
.
customizationmode
-
button
>
.
box
-
inherit
>
.
button
-
menu
-
dropmarker
{
margin
-
inline
-
end
:
0
;
padding
-
inline
-
end
:
0
;
list
-
style
-
image
:
url
(
chrome
:
/
/
global
/
skin
/
icons
/
arrow
-
dropdown
-
16
.
svg
)
;
}
.
customizationmode
-
button
:
-
moz
-
any
(
:
focus
:
active
:
hover
)
:
not
(
[
disabled
]
)
.
customizationmode
-
button
[
open
]
{
background
-
color
:
#
e1e1e5
;
}
#
customization
-
done
-
button
:
-
moz
-
any
(
:
focus
:
active
:
hover
)
:
not
(
[
disabled
]
)
{
background
-
color
:
#
0060df
;
}
.
customizationmode
-
button
[
disabled
=
"
true
"
]
{
opacity
:
.
5
;
}
%
ifdef
XP_WIN
}
%
endif
%
endif
.
customizationmode
-
button
>
.
box
-
inherit
>
.
box
-
inherit
>
.
button
-
icon
.
customizationmode
-
button
>
.
button
-
box
>
.
button
-
icon
{
height
:
16px
;
}
#
customization
-
uidensity
-
button
>
.
box
-
inherit
>
.
box
-
inherit
>
.
button
-
text
#
customization
-
lwtheme
-
button
>
.
box
-
inherit
>
.
box
-
inherit
>
.
button
-
text
{
margin
-
inline
-
start
:
6px
!
important
;
}
#
customization
-
uidensity
-
button
>
.
box
-
inherit
>
.
box
-
inherit
>
.
button
-
icon
#
customization
-
lwtheme
-
button
>
.
box
-
inherit
>
.
box
-
inherit
>
.
button
-
icon
{
width
:
16px
;
height
:
16px
;
border
-
radius
:
2px
;
background
-
size
:
contain
;
}
#
customization
-
lwtheme
-
button
>
.
box
-
inherit
>
.
box
-
inherit
>
.
button
-
icon
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
content
/
default
-
theme
-
icon
.
svg
"
)
;
}
#
customization
-
uidensity
-
button
>
.
box
-
inherit
>
.
box
-
inherit
>
.
button
-
icon
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
customizableui
/
density
-
normal
.
svg
"
)
;
}
#
widget
-
overflow
-
fixed
-
list
>
toolbarpaletteitem
[
place
=
"
panel
"
]
toolbarpaletteitem
[
place
=
"
toolbar
"
]
{
transition
:
border
-
width
250ms
ease
-
in
-
out
;
}
toolbarpaletteitem
[
mousedown
]
{
cursor
:
-
moz
-
grabbing
;
}
.
panel
-
customization
-
placeholder
toolbarpaletteitem
[
place
=
"
palette
"
]
toolbarpaletteitem
[
place
=
"
panel
"
]
{
transition
:
transform
var
(
-
-
drag
-
drop
-
transition
-
duration
)
ease
-
in
-
out
;
}
#
customization
-
palette
{
transition
:
opacity
.
3s
ease
-
in
-
out
;
opacity
:
0
;
}
#
customization
-
palette
[
showing
=
"
true
"
]
{
opacity
:
1
;
}
toolbarpaletteitem
toolbarbutton
[
disabled
]
{
color
:
inherit
!
important
;
}
#
widget
-
overflow
-
fixed
-
list
>
toolbarpaletteitem
[
notransition
]
[
place
=
"
panel
"
]
toolbarpaletteitem
[
notransition
]
.
panel
-
customization
-
placeholder
toolbarpaletteitem
[
notransition
]
[
place
=
"
toolbar
"
]
toolbarpaletteitem
[
notransition
]
[
place
=
"
palette
"
]
toolbarpaletteitem
[
notransition
]
[
place
=
"
panel
"
]
{
transition
:
none
;
}
toolbarpaletteitem
>
toolbarbutton
>
.
toolbarbutton
-
icon
toolbarpaletteitem
>
toolbarbutton
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
icon
toolbarpaletteitem
>
toolbaritem
.
panel
-
wide
-
item
toolbarpaletteitem
>
toolbarbutton
[
type
=
"
menu
-
button
"
]
{
transition
:
transform
var
(
-
-
drag
-
drop
-
transition
-
duration
)
cubic
-
bezier
(
.
6
2
.
75
1
.
5
)
!
important
;
}
toolbarpaletteitem
[
mousedown
]
>
toolbarbutton
>
.
toolbarbutton
-
icon
toolbarpaletteitem
[
mousedown
]
>
toolbarbutton
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
icon
{
transform
:
scale
(
1
.
3
)
;
}
toolbarpaletteitem
[
mousedown
]
>
toolbaritem
.
panel
-
wide
-
item
toolbarpaletteitem
[
mousedown
]
>
toolbarbutton
[
type
=
"
menu
-
button
"
]
{
transform
:
scale
(
1
.
1
)
;
}
/* ... */

