Bug 1388180 - Update the overflow panel styling in Customize Mode and show the overflow button as in the opened state, but with a disabled looking icon. r=Gijs
MozReview-Commit-ID: 387PZ2jp1SS

UltraBlame original commit: c55dbc386e21e056c0990a0821ea5951971c876d

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -188,7 +188,7 @@ font
 -
 weight
 :
-600
+500
 ;
 font
 -
@@ -2799,6 +2799,68 @@ padding
 -
 box
 ;
+%
+ifdef
+XP_MACOSX
+border
+:
+1px
+solid
+var
+(
+-
+-
+arrowpanel
+-
+dimmed
+-
+even
+-
+further
+)
+;
+box
+-
+shadow
+:
+0
+4px
+10px
+hsla
+(
+0
+0
+%
+0
+%
+.
+3
+)
+;
+-
+moz
+-
+appearance
+:
+none
+;
+border
+-
+radius
+:
+var
+(
+-
+-
+arrowpanel
+-
+border
+-
+radius
+)
+;
+%
+else
 border
 :
 1px
@@ -2820,7 +2882,7 @@ shadow
 :
 0
 0
-10px
+4px
 hsla
 (
 0
@@ -2830,31 +2892,6 @@ hsla
 %
 .
 2
-)
-;
-%
-ifdef
-XP_MACOSX
--
-moz
--
-appearance
-:
-none
-;
-border
--
-radius
-:
-var
-(
--
--
-arrowpanel
--
-border
--
-radius
 )
 ;
 %
@@ -2884,6 +2921,71 @@ bottom
 :
 -
 1px
+;
+}
+#
+nav
+-
+bar
+[
+customizing
+]
+>
+.
+overflow
+-
+button
+{
+fill
+:
+hsla
+(
+0
+0
+%
+30
+%
+.
+4
+)
+;
+}
+#
+nav
+-
+bar
+[
+customizing
+]
+>
+.
+overflow
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+background
+-
+color
+:
+var
+(
+-
+-
+toolbarbutton
+-
+active
+-
+background
+)
+;
+opacity
+:
+1
 ;
 }
 #
@@ -3012,7 +3114,7 @@ end
 :
 calc
 (
-4px
+9px
 +
 3
 *
